# nav2_diff_drive_car

./: README.md  cpu.sh
install/: local_setup.sh  setup.sh
install/imu_bno055/lib/imu_bno055/: imu_node
install/imu_bno055/share/imu_bno055/: package.sh  package.xml
install/python_parameters/lib/python_parameters/: listener  odometry_talker  odometry_talker1
install/python_parameters/share/python_parameters/: car_launch.py  package.sh
install/ydlidar_ros2_driver/lib/ydlidar_ros2_driver/: ydlidar_ros2_driver_node
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: package.sh
log/: latest_build
my_map/: map0417.data  map0417.pgm  map0417.yaml  map0506.data  map0506.pgm  map0506.yaml  map0509.data  map0509.pgm  map0509.yaml  map0512.data  map0512.pgm  map0512.yaml
scripts/: launch_slam.sh  set_goal.sh  set_goal_2.sh  set_initial_pose.sh
src/imu_bno055/: CMakeLists.txt  README.md
src/imu_bno055/include/: smbus_functions.h
src/imu_bno055/include/imu_package/: BNO055.h  imu_node.hpp
src/imu_bno055/install/: local_setup.sh  setup.sh
src/imu_bno055/install/imu_bno055/share/imu_bno055/: package.bash  package.zsh
src/imu_bno055/log/: latest_build
src/imu_bno055/src/: BNO055.c  imu_euler.cpp
src/install/: local_setup.sh  setup.ps1  setup.sh
src/log/: latest_build
src/python_parameters/: package.xml  setup.py
src/python_parameters/install/: local_setup.sh  setup.sh
src/python_parameters/python_parameters/: teensy_subscriber.py  teensy_subscriber.py.bak
src/python_parameters/python_parameters/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
src/ydlidar_ros2_driver/params/: X4.yaml
src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
(+12 files in other folders)
